--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,18 @@ exceptiongroup==1.3.0
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
+iniconfig==2.1.0
 Mako==1.3.10
 MarkupSafe==3.0.2
+packaging==25.0
 passlib==1.7.4
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
+pytest==8.3.5
 python-dotenv==1.1.0
 python-jose==3.4.0
 rsa==4.9.1
