--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,18 @@ alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+certifi==2025.4.26
 cffi==1.17.1
 click==8.1.8
 cryptography==45.0.2
+dnspython==2.7.0
 ecdsa==0.19.1
+email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 Mako==1.3.10
